<resources>

    <!--
        KEY
        ================================================================
        Append to the end of a resource to provide more information
        ucf: uppercase first - the first letter of the word is uppercase
        uc: uppercase - all characters are uppercase
        lc: lowercase - all characters are lowercase
        ================================================================
    -->

    <string name="untagged_ucf">Untagged</string>
    <string name="unnammed_ucf">Unnamed</string>
    <string name="options_ucf">Options</string>
    <string name="edit_save_recording_ucf">Edit &amp; Save Recording</string>
    <string name="tag_editor_ucf">Edit &amp; Assign Tags</string>
    <string name="label_name_ucf">Enter A Name...</string>
    <string name="tag_label_ucf">Tag Label...</string>

    <string name="cancel_uc">CANCEL</string>
    <string name="edit_uc">EDIT</string>
    <string name="delete_uc">DELETE</string>
    <string name="save_uc">SAVE</string>
    <string name="yes_uc">YES</string>
    <string name="retry_uc">RETRY</string>
    <string name="tag_editor_uc">EDIT &amp; ASSIGN TAGS</string>
    <string name="add_tag">ADD TAG</string>
    <string name="done_button">DONE</string>

    <!-- ########################################################## -->

    <string name="app_name">FastPhrase</string>
    <string name="version">Version: </string>

    <string name="error_duplicate_label_exists">This label is currently in use. Labels must be unique.</string>
    <string name="error_duplicate_tag_exists">This tag currently exists. Tags must be unique.</string>
    <string name="error_empty_label">Please enter a label or name for this recording!</string>
    <string name="error_empty_tag">Please enter a label or name for this new tag!</string>
    <string name="error_other_recording_app">Unable to connect to your device\'s microphone. It is
        possible that another application is currently using the microphone and requires closing.</string>
    <string name="error_empty_recording">There is no audio associated with this recording. Please try recording it again.</string>
    <string name="error_short_recording">Recordings must be longer than half a second</string>

    <string name="empty_list_message">Press the red button to create your first recording!</string>

    <string name="select_tags">Select which tags to assign to this recording below. You can also add
        and edit tags here. Press the back button when complete.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="create_a_new_tag">Create A New Tag</string>

    <!-- ABOUT ACTIVITY -->
    <string name="team_caption">FastPhrase Team (left to right): Jennings Fairchild, Justin Tan, Matt
        Dyl, Bob Timm, Wesley Vance</string>
    <string name="about_description">FastPhrase was designed and created at Texas A&amp;M University for
        a senior design project in Computer Science. Under the guidance of Dr. Robin Murphy, FastPhrase
        is an application designed to aid emergency workers in disaster situations where translations
        are needed without a reliable internet connection. For more on Dr. Murphy and her research in
        the field of robotics and emergency response, please visit http://faculty.cs.tamu.edu/murphy/ </string>
    <string name="haptic_checkbox">Haptic Click Feedback</string>
    <string name="audio_checkbox">Audio Click Feedback</string>
    <!-- ########################################################## -->
    <!-- RECORD ACTIVITY -->
    <string name="record_warning">Warning: Turning off device screen will cause recording to be lost.</string>
</resources>
