<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_medium"
    android:background="@color/white_100">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:layout_gravity="center"
        android:paddingTop="@dimen/spacing_medium"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/black_90"
        style="@style/h0"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_large">

        <Button
            android:id="@+id/yes"
            android:text="@string/yes_uc"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/black_90"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/cancel"
            android:text="@string/cancel_uc"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/black_90"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>





</LinearLayout>