<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_medium"
    android:background="@color/white_100">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_tag"
        android:layout_gravity="center"
        android:paddingTop="@dimen/spacing_medium"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/black_90"
        style="@style/h0"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/h3"
        android:fontFamily="sans-serif"
        android:textColor="@color/r900"
        android:textAlignment="center"
        android:padding="@dimen/spacing_medium"
        android:visibility="gone"/>


    <!--
        Dummy item to prevent AutoCompleteTextView from receiving focus
        http://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-activity-startup
    -->
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <EditText
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:hint="@string/tag_label_ucf"
        android:maxLength="30"
        android:inputType="textAutoComplete|textCapWords"
        style="@style/h1"
        android:layout_gravity="center_vertical"
        android:nextFocusUp="@id/label"
        android:nextFocusLeft="@id/label"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_large">

        <Button
            android:id="@+id/add_tag"
            android:text="@string/add_tag"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/black_90"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/cancel"
            android:text="@string/cancel_uc"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/black_90"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>





</LinearLayout>